fix overflow jobselect

--- a/src/components/character/editCharacter.scss
+++ b/src/components/character/editCharacter.scss
@@ -5,6 +5,10 @@
   background-color: transparent !important;
 }
 
+.jobSelect__container {
+  display: table;
+}
+
 .title_name {
   margin-right: 3rem;
 }
